src/objects/BR_Events_Zone__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zone_Id__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zone Id</label>
        <type>Text</type>
    </fields>
    <label>AC Events Zone</label>
    <nameField>
        <label>Zone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AC Events Zones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>